@@ -2,4 +2,6 @@
 name = Menu Node API
 description = Manages relationships between node ids and menu items.
 dependencies[] = menu
-core = 6.x
+core = 7.x
+files[] = menu_node.install
+files[] = tests/menu_node.test
