@@ -1,0 +1,8 @@
+<?php
+
+// $Id$
+
+/**
+ * @file
+ * Simpletest for Menu Node API.
+ */
