@@ -7,6 +7,8 @@ CHANGELOG for Menu Node
 -- #882326. Fixes problem with delete hook passing partial node object.
 -- Creates the 6.x.1.4 release.
 -- Creates the bugfix-only 6--1 branch.
+-- Adds tests folder.
+-- Begins D7 port.
 
 14-SEP-2009
   -- #568246 by roboneale. Accoutns for revisions to nodes.
